# APF-Paper-7-Action-Internalization-Lagrangian

./: APF_Reviewer_Walkthrough.ipynb  Paper_7_Action_Internalization_Lagrangian_Supplement_v1.0.tex  Paper_7_Action_Internalization_Lagrangian_v2.0.tex  README.md  REVIEWERS_GUIDE.md  START_HERE.md  derivation_graph.json  interactive_dag.html  pyproject.toml  repo_map.json  run_checks.py  theorems.json  zenodo.json
ai_context/: AGENTS.md  ARGUMENT_FLOW.md  CITING.md  CLAIMS_LEDGER.md  DO_NOT_CLAIM.md  HOW_TO_VERIFY.md  LOCAL_VS_IMPORTED.md  PAPER_LINEAGE.md  STARTING_PROMPTS.md  THEOREMS.md  derivation_graph.json  repo_map.json  theorems.json
ai_context/wiki/codebase/: APF Codebase.md  Predictions Catalog.md
ai_context/wiki/papers/: Paper 13 - Minimal Admissibility Core.md  Paper 2 - Structure.md  Paper 3 - Ledgers.md  Paper 4 - Constraints.md  Paper 5 - Quantum.md  Paper 6 - Dynamics and Geometry.md  Paper 7 - Action.md  What Physics Permits.md
apf/: __init__.py  bank.py  core.py
